# Suvera1stRepository

./: .gitignore  CNAME  about.html  enquire.html  index.html  logo-black-on-white.eps  logo-black-transparent.eps  logo-white-on-black.eps  logo-white-transparent.eps  process.html  robots.txt  script.js  services.html  sitemap.xml  styles.css
about/: index.html
assets/css/: style.css
assets/js/: main.js
enquire/: index.html
process/: index.html
services/: index.html
takeoff_agent/: __init__.py  agent.py  main.py  pyproject.toml  requirements.txt  tools.py
takeoff_agent/processors/: image_processor.py
takeoff_agent/reporters/: excel_reporter.py
